fix: increase author bio paragraph spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1020,7 +1020,7 @@ body.colorscheme-dark .read-more-btn:hover {
   font-size: 0.88em;
   color: var(--text-body);
   line-height: 1.6;
-  margin: 0 0 1em 0;
+  margin: 0 0 1.5em 0;
 }
 
 .author-bio-text p:last-child {
